aligning issues fixed

--- a/src/index.css
+++ b/src/index.css
@@ -47,10 +47,11 @@ code {
 
 .game-title {
   display: flex;
-  align-items: center;
+  justify-content: center;
+
   font-size: 50px;
   color: yellowgreen;
-  /* margin-right: 6rem; */
+  margin-bottom: 3rem;
   font-family: "Comic Sans MS", cursive, sans-serif;
 }
 
